compiler/testData/diagnostics/tests/operatorsOverloading/kt13349.fir.kt
object Foo {
    operator fun <T> invoke() {}
}

fun main() {
    <!INAPPLICABLE_CANDIDATE!>Foo<!><Int>()
}